# scryland

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  dependabot-auto-merge.yml  release.yml
scripts/: capture_screenshots.py
src/scryland/: __init__.py  __main__.py  cli.py  config.py  credentials.py  csv_import.py  db.py  exceptions.py  models.py  mythic_csv.py  safe_logging.py
src/scryland/browser/: flaky.py  pagination.py  selectors.py  session.py
src/scryland/browser/pages/: add_inventory.py  inventory.py  login.py  orders.py  price_report.py  pricing.py
src/scryland/ebay/: __init__.py  auth.py  client.py  listing.py  orders.py  scryfall.py
src/scryland/pricing/: comparator.py  engine.py  guardrails.py  optimizer.py
tests/: conftest.py  test_cli.py  test_cli_commands.py  test_cli_watch.py  test_config.py  test_credentials.py  test_cross_marketplace.py  test_csv_import.py  test_db.py  test_db_coverage.py  test_ebay_auth.py  test_ebay_client.py  test_ebay_listing.py  test_ebay_orders.py  test_flaky.py  test_models.py  test_mythic_csv.py  test_optimizer.py  test_orders.py  test_pagination.py  test_safe_logging.py  test_scryfall.py
tests/test_browser/: test_session.py
tests/test_browser/test_pages/: test_add_inventory.py  test_inventory.py  test_login.py  test_price_report.py
tests/test_pricing/: test_comparator.py  test_engine.py  test_guardrails.py
