[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "scryland"
version = "0.1.0"
description = "TCGPlayer seller account management bot"
requires-python = ">=3.11"
dependencies = [
    "playwright>=1.40",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "click>=8.0",
    "rich>=13.0",
    "cryptography>=41.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.0",
    "pytest-cov>=4.0",
    "ruff>=0.1",
    "mypy>=1.0",
    "pre-commit>=3.0",
]

[project.scripts]
scryland = "scryland.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/scryland"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
source = ["src/scryland"]
branch = true
omit = [
    "src/scryland/__main__.py",
    "src/scryland/browser/pages/*.py",  # Playwright; requires live browser
]

[tool.coverage.report]
show_missing = true
precision = 1
skip_covered = false

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "C4",  # flake8-comprehensions
]
ignore = [
    "E501",   # line-length; we set 100 but occasional overflows are fine
    "B008",   # Click uses function defaults (e.g. @click.option) — flagged but idiomatic
    "UP007",  # we use Optional in some annotations where | None is less clear
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B008", "E402"]
"src/scryland/cli.py" = ["B008"]  # Click decorators

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
